--- a/_includes/post__taxonomy.html
+++ b/_includes/post__taxonomy.html
@@ -1,3 +1,9 @@
+<!--Archive page 용-: (post -> page)-->
+<!--page__taxonomy.html에서 가져 옴-->
+
+<!--Archive page 용-: (post -> page)-->
+<!--page__taxonomy.html에서 가져 옴-->
+
 {%- if site.category_archive.type and post.categories[0] -%}
 {%- case site.category_archive.type -%}
 {%- when "liquid" -%}
@@ -34,3 +40,4 @@
         </span>
 {%- endif -%}
 {%- endif -%}
+
