--- a/_includes/social-share.html
+++ b/_includes/social-share.html
@@ -1,4 +1,5 @@
 <section class="page__share">
+  {% include customcomments.html %}
   {% if site.data.ui-text[site.locale].share_on_label %}
     <h4 class="page__share-title">{{ site.data.ui-text[site.locale].share_on_label | default: "Share on" }}</h4>
   {% endif %}
