--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -52,9 +52,12 @@ layout: default
         {% endif %}
         {% include page__taxonomy.html %}
         {% include page__date.html %}
+
       </footer>
 
-      {% if page.share %}{% include social-share.html %}{% endif %}
+      {% if page.share %}
+      {% include social-share.html %}
+      {% endif %}
 
       {% include post_pagination.html %}
     </div>
@@ -64,7 +67,8 @@ layout: default
     {% endif %}
   </article>
 
-  {% comment %}<!-- only show related on a post page when `related: true` -->{% endcomment %}
+  {% comment %}<!-- only show related on a post page when `related: true` --> {% endcomment %}
+
   {% if page.id and page.related and site.related_posts.size > 0 %}
     <div class="page__related">
       <h2 class="page__related-title">{{ site.data.ui-text[site.locale].related_label | default: "You May Also Enjoy" }}</h2>
@@ -89,3 +93,8 @@ layout: default
     </div>
   {% endif %}
 </div>
+
+
+
+
+
